# wallet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: MacOS.yml  iOS-combined.yml  ubuntu-latest.yml
core/: CMakeLists.txt
core/client/: CMakeLists.txt  Client.cpp  Client.hpp  wallet.cpp
core/common/: CMakeLists.txt  sha_util.cpp  sha_util.hpp
core/server/: CMakeLists.txt  Server.cpp  Server.hpp
include/wallet/: wallet.h
test/: CMakeLists.txt
test/client/: CMakeLists.txt  client_test.cpp  wallet_test.cpp
